add step on test_case_032

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 log_cli = true
-addopts = -s -v --reruns 3 --html=api_test_report.html --self-contained-html --log-cli-level=DEBUG --log-file=api_test.log
+addopts = -s -v --reruns 3 --html=api_test_report.html --self-contained-html --log-cli-level=DEBUG --log-file=api_test.log --durations=0
